2000-10-31  Jacob "Ulysses" Berkman  <jacob@helixcode.com>

	* gnome-login-check.c (main): patch from KUSANO Takayuki
	<AE5T-KSN@asahi-net.or.jp> to fix i18n

2000-10-30  Jacob "Ulysses" Berkman  <jacob@helixcode.com>

	* gnome-libice-check.c (main): seg fault if libICE is broken

	* gnome-login-check.c (main): add a test for broken libICE on solaris

2000-10-15 John Fleck <jfleck@inkstain.net>

	* updated help/C/session.sgml for Nautilus compatibility (patch
	from Greg Leblanc)

Thu Jun 29 02:39:04 2000  Tim Janik  <timj@gtk.org>

	* main.c (main): if the session loaded is empty (probably because
	the session name is a new one), fallback to failsafe and reload,
	so the clients of the default session are present.

Sat May 27 12:33:19 2000  George Lebl <jirka@5z.com>

	* main.c, manager.c, session-properties.c, gsm-protocol.c, ice.c:
          Fix compile warnings

	* logout.c: Dialog running can return -1 as well.  This is fixes
	  a compile warning and bug #12130

2000-05-18  Mark Crichton <crichton@gimp.org>

        * session-properties.c: Made it use a better default visual.
        This is for the proposed changes in gdk_imlib.

2000-05-14  Karl Eichwalder  <ke@suse.de>

	* session.desktop: Improve de.

2000-05-11  Miguel de Icaza  <miguel@helixcode.com>

	* ice.c (initialize_ice): By default, do not listen to TCP
	connections.

Mon May 08 20:18:32 2000  George Lebl <jirka@5z.com>

	* splash.c (destroy_dialog): run gnome-hint with --startup-session

2000-05-06  Jacob Berkman  <jacob@helixcode.com>

	* default.in: move gmc to priority 40 so that it shows up in the
	splash screen

2000-05-05  Jacob Berkman  <jacob@helixcode.com>

	* logout.c (display_gui): open up (the panel's) help
	(display_gui): add a help button

2000-05-03  Michael Meeks  <michael@helixcode.com>

	* command.c (command): s/strcasecmp/g_strcasecmp/

Tue May 02 23:42:25 2000  George Lebl <jirka@5z.com>

	* ice.c: since the code using IceListenForWellKnownConnections is